syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service Racing {
  // ListRaces returns a list of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {
    option (google.api.http) = { post: "/v1/list-races", body: "*" };
  }
}

/* Requests/Responses */

// Request for ListRaces call.
message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  optional bool visible_only = 2;
  optional SortField sort_field = 3; // Defaults to ADVERTISED_START_TIME if not specified.
  optional SortDirection sort_direction = 4; // Defaults to ASC if not specified.
}


// Available fields for sorting races.
enum SortField {
  ADVERTISED_START_TIME = 0;
  NAME = 1;
  NUMBER = 2;
}

// Sort direction options.
enum SortDirection {
  ASC = 0; // Ascending order (default).
  DESC = 1;  // Descending order.
}

enum RaceStatus {
  OPEN = 0;   // Race is open (advertised_start_time is in the future)
  CLOSED = 1; // Race is closed (advertised_start_time is in the past)
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  // Status represents the current status of the race, derived from advertised_start_time.
  RaceStatus status = 7;
}
